--- a/deps/pyproject.toml
+++ b/deps/pyproject.toml
@@ -1,9 +1,8 @@
 [tool.poetry]
 name = "poetry-kingmed"
-version = "0.1.0"
-description = ""
+version = "0.1.1"
+description = "The Kingmed Case Report Scraper is a web scraping tool designed to retrieve comprehensive medical histories from the Kingmed website."
 authors = ["Harutyun <106912298+HarutyunAg@users.noreply.github.com>"]
-readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
